--- a/wp7-donor/Donor/HelpPage.xaml
+++ b/wp7-donor/Donor/HelpPage.xaml
@@ -26,7 +26,7 @@ FontSize="24" FontFamily="Segoe WP Semibold" />
 </controls:Panorama.Title>
             
 <controls:Panorama.Background>
-<ImageBrush ImageSource="bg_04.png"/>
+<ImageBrush ImageSource="images/bg_04.png"/>
 </controls:Panorama.Background>
 
             <!--Panorama item one-->
